mutants.out/log/src__matrix.rs_line_99_col_5.log

*** src/matrix.rs:99:5: replace transpose -> Matrix with Default::default()

*** mutation diff:
--- src/matrix.rs
+++ replace transpose -> Matrix with Default::default()
@@ -91,23 +91,17 @@
         }
     }
     contract_post_matmul!(&c, a, b);
     c
 }
 
 /// A^T[i,j] = A[j,i]
 pub fn transpose(a: &Matrix) -> Matrix {
-    let mut data = vec![0.0; a.rows() * a.cols()];
-    for i in 0..a.rows() {
-        for j in 0..a.cols() {
-            data[j * a.rows() + i] = a[(i, j)];
-        }
-    }
-    Matrix::new(a.cols(), a.rows(), data)
+    Default::default() /* ~ changed by cargo-mutants ~ */
 }
 
 /// Gauss-Jordan elimination. Returns None if singular.
 pub fn inverse(a: &Matrix) -> Option<Matrix> {
     assert_eq!(a.rows(), a.cols(), "inverse: must be square");
     let n = a.rows();
     let mut aug = Matrix::zeros(n, 2 * n);
     for i in 0..n {


*** /home/noah/.rustup/toolchains/stable-x86_64-unknown-linux-gnu/bin/cargo test --no-run --verbose --package=nlib@0.1.0
    Blocking waiting for file lock on artifact directory
       Fresh unicode-ident v1.0.24
       Fresh equivalent v1.0.2
       Fresh hashbrown v0.16.1
       Fresh itoa v1.0.18
       Fresh unsafe-libyaml v0.2.11
       Fresh ryu v1.0.23
       Fresh find-msvc-tools v0.1.9
       Fresh shlex v1.3.0
       Fresh cfg-if v1.0.4
       Fresh pkg-config v0.3.32
       Fresh autocfg v1.5.0
       Fresh memchr v2.8.0
       Fresh winnow v0.7.15
       Fresh toml_write v0.1.2
       Fresh iana-time-zone v0.1.65
       Fresh lz4_flex v0.11.6
       Fresh regex-syntax v0.8.10
       Fresh memo-map v0.3.3
       Fresh either v1.15.0
       Fresh proc-macro2 v1.0.106
       Fresh indexmap v2.13.1
       Fresh aho-corasick v1.1.4
       Fresh quote v1.0.45
       Fresh serde_core v1.0.228
       Fresh libc v0.2.184
       Fresh crossbeam-utils v0.8.21
       Fresh zmij v1.0.21
       Fresh anyhow v1.0.102
       Fresh regex-automata v0.4.14
       Fresh syn v2.0.117
       Fresh jobserver v0.1.34
       Fresh num-traits v0.2.19
       Fresh crossbeam-epoch v0.9.18
       Fresh getrandom v0.3.4
       Fresh serde_json v1.0.149
       Fresh hostname v0.4.2
       Fresh num_cpus v1.17.0
       Fresh memmap2 v0.9.10
       Fresh regex v1.12.3
       Fresh serde_derive v1.0.228
       Fresh cc v1.2.59
       Fresh zerocopy-derive v0.8.48
       Fresh thiserror-impl v2.0.18
       Fresh rand_core v0.9.5
       Fresh crossbeam-deque v0.8.6
       Fresh provable-contracts-macros v0.2.2
       Fresh rmp v0.8.15
       Fresh chrono v0.4.44
       Fresh provable-contracts-macros v0.1.1
       Fresh provable-contracts-macros v0.3.1
       Fresh serde v1.0.228
       Fresh zerocopy v0.8.48
       Fresh thiserror v2.0.18
       Fresh rayon-core v1.13.0
       Fresh serde_yaml_ng v0.10.0
       Fresh serde_spanned v0.6.9
       Fresh toml_datetime v0.6.11
       Fresh half v2.7.1
       Fresh ppv-lite86 v0.2.21
       Fresh serde_yaml v0.9.34+deprecated
       Fresh bincode v1.3.3
       Fresh rmp-serde v1.3.1
       Fresh rayon v1.11.0
       Fresh minijinja v2.19.0
       Fresh zstd-sys v2.0.16+zstd.1.5.7
       Fresh toml_edit v0.22.27
       Fresh trueno-quant v0.1.0
       Fresh rand_chacha v0.9.0
       Fresh zstd-safe v7.2.4
       Fresh toml v0.8.23
       Fresh rand v0.9.2
       Fresh zstd v0.13.3
       Fresh trueno v0.16.5
       Fresh provable-contracts v0.3.1
       Fresh batuta-common v0.1.0
       Fresh aprender v0.27.1
       Dirty nlib v0.1.0 (/tmp/cargo-mutants-rust-mdipierro-nlib-ec9Z2z.tmp): the file `src/matrix.rs` has changed (1775542385.558325099s, 47000500ns after last build at 1775542385.511324599s)
   Compiling nlib v0.1.0 (/tmp/cargo-mutants-rust-mdipierro-nlib-ec9Z2z.tmp)
     Running `/home/noah/.rustup/toolchains/stable-x86_64-unknown-linux-gnu/bin/rustc --crate-name nlib --edition=2024 src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=758b8f65759aed54 -C extra-filename=-afb3e2747419bddf --out-dir /mnt/nvme-raid0/targets/rust-mdipierro-nlib/debug/deps -C incremental=/mnt/nvme-raid0/targets/rust-mdipierro-nlib/debug/incremental -L dependency=/mnt/nvme-raid0/targets/rust-mdipierro-nlib/debug/deps --extern aprender=/mnt/nvme-raid0/targets/rust-mdipierro-nlib/debug/deps/libaprender-a14e1e9adf43aa05.rlib --extern provable_contracts=/mnt/nvme-raid0/targets/rust-mdipierro-nlib/debug/deps/libprovable_contracts-ac30f8fb28155649.rlib --extern serde=/mnt/nvme-raid0/targets/rust-mdipierro-nlib/debug/deps/libserde-cdc9f970ba08a88d.rlib --extern serde_json=/mnt/nvme-raid0/targets/rust-mdipierro-nlib/debug/deps/libserde_json-03c27675fcdb3aef.rlib -L native=/mnt/nvme-raid0/targets/rust-mdipierro-nlib/debug/build/zstd-sys-fccbedab690a263b/out`
     Running `/home/noah/.rustup/toolchains/stable-x86_64-unknown-linux-gnu/bin/rustc --crate-name nlib --edition=2024 src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=0d1f0a151b9ad688 -C extra-filename=-1bae53fbb45e0a35 --out-dir /mnt/nvme-raid0/targets/rust-mdipierro-nlib/debug/deps -C incremental=/mnt/nvme-raid0/targets/rust-mdipierro-nlib/debug/incremental -L dependency=/mnt/nvme-raid0/targets/rust-mdipierro-nlib/debug/deps --extern aprender=/mnt/nvme-raid0/targets/rust-mdipierro-nlib/debug/deps/libaprender-a14e1e9adf43aa05.rmeta -L native=/mnt/nvme-raid0/targets/rust-mdipierro-nlib/debug/build/zstd-sys-fccbedab690a263b/out`
error[E0277]: the trait bound `matrix::Matrix: Default` is not satisfied
  --> src/matrix.rs:99:5
   |
99 |     Default::default() /* ~ changed by cargo-mutants ~ */
   |     ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `Default` is not implemented for `matrix::Matrix`
  --> src/matrix.rs:10:1
   |
10 | pub struct Matrix {
   | ^^^^^^^^^^^^^^^^^

For more information about this error, try `rustc --explain E0277`.
error: could not compile `nlib` (lib) due to 1 previous error

Caused by:
  process didn't exit successfully: `/home/noah/.rustup/toolchains/stable-x86_64-unknown-linux-gnu/bin/rustc --crate-name nlib --edition=2024 src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=0d1f0a151b9ad688 -C extra-filename=-1bae53fbb45e0a35 --out-dir /mnt/nvme-raid0/targets/rust-mdipierro-nlib/debug/deps -C incremental=/mnt/nvme-raid0/targets/rust-mdipierro-nlib/debug/incremental -L dependency=/mnt/nvme-raid0/targets/rust-mdipierro-nlib/debug/deps --extern aprender=/mnt/nvme-raid0/targets/rust-mdipierro-nlib/debug/deps/libaprender-a14e1e9adf43aa05.rmeta -L native=/mnt/nvme-raid0/targets/rust-mdipierro-nlib/debug/build/zstd-sys-fccbedab690a263b/out` (exit status: 1)
warning: build failed, waiting for other jobs to finish...
error: could not compile `nlib` (lib test) due to 1 previous error

Caused by:
  process didn't exit successfully: `/home/noah/.rustup/toolchains/stable-x86_64-unknown-linux-gnu/bin/rustc --crate-name nlib --edition=2024 src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=758b8f65759aed54 -C extra-filename=-afb3e2747419bddf --out-dir /mnt/nvme-raid0/targets/rust-mdipierro-nlib/debug/deps -C incremental=/mnt/nvme-raid0/targets/rust-mdipierro-nlib/debug/incremental -L dependency=/mnt/nvme-raid0/targets/rust-mdipierro-nlib/debug/deps --extern aprender=/mnt/nvme-raid0/targets/rust-mdipierro-nlib/debug/deps/libaprender-a14e1e9adf43aa05.rlib --extern provable_contracts=/mnt/nvme-raid0/targets/rust-mdipierro-nlib/debug/deps/libprovable_contracts-ac30f8fb28155649.rlib --extern serde=/mnt/nvme-raid0/targets/rust-mdipierro-nlib/debug/deps/libserde-cdc9f970ba08a88d.rlib --extern serde_json=/mnt/nvme-raid0/targets/rust-mdipierro-nlib/debug/deps/libserde_json-03c27675fcdb3aef.rlib -L native=/mnt/nvme-raid0/targets/rust-mdipierro-nlib/debug/build/zstd-sys-fccbedab690a263b/out` (exit status: 1)

*** result: Failure(101)
